package eapli.base.questionnaire.repository;

import eapli.base.questionnaire.domain.Questionnaire.Questionnaire;
import eapli.framework.domain.repositories.DomainRepository;

public interface QuestionnaireRepository extends DomainRepository<String, Questionnaire> {

}

